force-app/main/default/objects/Case/fields/Account_Activate__c.field-meta.xml
<CustomField>
    <fullName>Account_Activate__c</fullName>
    <label>Account Activate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>