force-app/main/default/objects/Case/fields/Account_Address__c.field-meta.xml
<CustomField>
    <fullName>Account_Address__c</fullName>
    <description>Billing Address for the Account</description>
    <formula>Account.BillingStreet&amp; BR() &amp;
Account.BillingCity&amp;&quot;, &quot;&amp;Account.BillingState&amp;&quot; &quot;&amp; Account.BillingPostalCode</formula>
    <inlineHelpText>Billing Address for the Account</inlineHelpText>
    <label>Account Address</label>
    <type>Text</type>
</CustomField>