force-app/main/default/objects/Case/fields/Account_Open_Date__c.field-meta.xml
<CustomField>
    <fullName>Account_Open_Date__c</fullName>
    <description>Date the account was opened</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date the account was opened</inlineHelpText>
    <label>Account Open Date</label>
    <type>Date</type>
</CustomField>