force-app/main/default/objects/Case/fields/Acquisition_Channel__c.field-meta.xml
<CustomField>
    <fullName>Acquisition_Channel__c</fullName>
    <label>Acquisition Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dealership</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>