force-app/main/default/objects/Case/fields/Application_ID__c.field-meta.xml
<CustomField>
    <fullName>Application_ID__c</fullName>
    <description>FCA Dealer Card Application ID</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Application ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>