force-app/main/default/objects/Case/fields/Balance_In_Dealer_Charges_Only__c.field-meta.xml
<CustomField>
    <fullName>Balance_In_Dealer_Charges_Only__c</fullName>
    <label>Balance - In-Dealer Charges Only</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>