force-app/main/default/objects/Case/fields/Bank_Number__c.field-meta.xml
<CustomField>
    <fullName>Bank_Number__c</fullName>
    <description>Used to track the Customer bank number for a support case</description>
    <inlineHelpText>The bank number for this customer&#39;s implementation</inlineHelpText>
    <label>Bank Number</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0001</fullName>
            </value>
            <value>
                <fullName>0004</fullName>
            </value>
            <value>
                <fullName>0020</fullName>
            </value>
            <value>
                <fullName>0030</fullName>
            </value>
            <value>
                <fullName>0070</fullName>
            </value>
            <value>
                <fullName>0076</fullName>
            </value>
            <value>
                <fullName>0078</fullName>
            </value>
            <value>
                <fullName>0079</fullName>
            </value>
            <value>
                <fullName>0083</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>