force-app/main/default/objects/Case/fields/Case_Owner_s_Market__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_s_Market__c</fullName>
    <formula>text(Owner:User.User_s_Market__c)</formula>
    <label>Case Owner&#39;s Market</label>
    <type>Text</type>
</CustomField>