force-app/main/default/objects/Case/fields/Case_Owner_s_Profile__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_s_Profile__c</fullName>
    <formula>Owner:User.Profile.Name</formula>
    <label>Case Owner&#39;s Profile</label>
    <type>Text</type>
</CustomField>