force-app/main/default/objects/Case/fields/Case_Owner_s_Role__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_s_Role__c</fullName>
    <formula>Owner:User.UserRole.Name</formula>
    <label>Case Owner&#39;s Role</label>
    <type>Text</type>
</CustomField>