force-app/main/default/objects/Case/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <label>Case Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Select One</fullName>
                <default>true</default>
                <label>Select One</label>
            </value>
            <value>
                <fullName>Task</fullName>
            </value>
            <value>
                <fullName>Research</fullName>
            </value>
            <value>
                <fullName>Account Maintenance</fullName>
            </value>
            <value>
                <fullName>Customer Issue</fullName>
            </value>
            <value>
                <fullName>Fraud</fullName>
            </value>
            <value>
                <fullName>Implementation</fullName>
            </value>
            <value>
                <fullName>Customer Feedback</fullName>
            </value>
            <value>
                <fullName>Internal Project</fullName>
            </value>
            <value>
                <fullName>Doc Maintenance</fullName>
            </value>
            <value>
                <fullName>Card Maintenance</fullName>
            </value>
            <value>
                <fullName>Card Payments</fullName>
            </value>
            <value>
                <fullName>Card Troubleshooting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>