force-app/main/default/objects/Case/fields/Cause_of_issue__c.field-meta.xml
<CustomField>
    <fullName>Cause_of_issue__c</fullName>
    <description>Used for reporting on internal Mortgage Support cases</description>
    <label>Cause of issue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>System Issue (general)</fullName>
            </value>
            <value>
                <fullName>System Issue (known issue)</fullName>
            </value>
            <value>
                <fullName>User input (basic)</fullName>
            </value>
            <value>
                <fullName>User input (advanced)</fullName>
            </value>
            <value>
                <fullName>User knowledge (basic)</fullName>
            </value>
            <value>
                <fullName>User knowledge (advanced)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>