force-app/main/default/objects/Case/fields/Coaching_Needed__c.field-meta.xml
<CustomField>
    <fullName>Coaching_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Utilized by Mortgage Support for internal case tracking</description>
    <label>Coaching Needed</label>
    <type>Checkbox</type>
</CustomField>