force-app/main/default/objects/Case/fields/Created_by_Me__c.field-meta.xml
<CustomField>
    <fullName>Created_by_Me__c</fullName>
    <formula>CreatedById = $User.Id</formula>
    <label>Created by Me</label>
    <type>Checkbox</type>
</CustomField>