force-app/main/default/objects/Case/fields/CTS_Customer__c.field-meta.xml
<CustomField>
    <fullName>CTS_Customer__c</fullName>
    <description>Indicate whether or not this is an existing CTS Customer</description>
    <inlineHelpText>Is this an existing CTS Customer?</inlineHelpText>
    <label>CTS Customer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Select One</fullName>
                <default>true</default>
                <label>Select One</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>