force-app/main/default/objects/Case/fields/CTS_Products__c.field-meta.xml
<CustomField>
    <fullName>CTS_Products__c</fullName>
    <label>CTS Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account Maintenance</fullName>
            </value>
            <value>
                <fullName>ACH</fullName>
            </value>
            <value>
                <fullName>ACH Addenda Reporting</fullName>
            </value>
            <value>
                <fullName>ACH PP/Block</fullName>
            </value>
            <value>
                <fullName>Analysis</fullName>
            </value>
            <value>
                <fullName>Cash Vault</fullName>
            </value>
            <value>
                <fullName>Check Block</fullName>
            </value>
            <value>
                <fullName>Checks/Deposits</fullName>
            </value>
            <value>
                <fullName>CMO</fullName>
            </value>
            <value>
                <fullName>Commercial Banker</fullName>
            </value>
            <value>
                <fullName>Control Agreement</fullName>
            </value>
            <value>
                <fullName>Controlled Disbursement</fullName>
            </value>
            <value>
                <fullName>Controlled Disbursement Drafts</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Drafts</fullName>
            </value>
            <value>
                <fullName>First Cash</fullName>
            </value>
            <value>
                <fullName>Forex</fullName>
            </value>
            <value>
                <fullName>FX</fullName>
            </value>
            <value>
                <fullName>IBWS</fullName>
            </value>
            <value>
                <fullName>ICS</fullName>
            </value>
            <value>
                <fullName>Image Archive</fullName>
            </value>
            <value>
                <fullName>Information Reporting</fullName>
            </value>
            <value>
                <fullName>Insured Cash Sweep</fullName>
            </value>
            <value>
                <fullName>Investment Services</fullName>
            </value>
            <value>
                <fullName>Line of Credit</fullName>
            </value>
            <value>
                <fullName>Loans</fullName>
            </value>
            <value>
                <fullName>Loan Sweep</fullName>
            </value>
            <value>
                <fullName>Lockbox (Retail)</fullName>
            </value>
            <value>
                <fullName>Lockbox (Wholesale)</fullName>
            </value>
            <value>
                <fullName>MCRPPS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>