force-app/main/default/objects/Case/fields/CTS_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>CTS_Sales_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CTS Sales Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>