force-app/main/default/objects/Case/fields/CTS_Support_Rep__c.field-meta.xml
<CustomField>
    <fullName>CTS_Support_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CTS Support Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>