force-app/main/default/objects/Case/fields/Current_or_Previous_Month__c.field-meta.xml
<CustomField>
    <fullName>Current_or_Previous_Month__c</fullName>
    <formula>If(Month(TODAY()) &lt;= Month(DATEVALUE(ClosedDate)), False, True)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current or Previous Month #</label>
    <type>Checkbox</type>
</CustomField>