force-app/main/default/objects/Case/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <description>‘Customer Name’ is the customer’s name who called in to say that they didn’t apply for a credit card (DNA)</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>‘Customer Name’ is the customer’s name who called in to say that they didn’t apply for a credit card (DNA)</inlineHelpText>
    <label>Customer Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>