force-app/main/default/objects/Case/fields/Date_of_Call__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Call__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date of Call</label>
    <type>Date</type>
</CustomField>