force-app/main/default/objects/Case/fields/Date_Sent_to_Onboarding__c.field-meta.xml
<CustomField>
    <fullName>Date_Sent_to_Onboarding__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Sent to Onboarding</label>
    <type>Date</type>
</CustomField>