force-app/main/default/objects/Case/fields/Email_that_Submitted_Application__c.field-meta.xml
<CustomField>
    <fullName>Email_that_Submitted_Application__c</fullName>
    <description>Email of Person that Submitted App’ is the employee at the dealership who actually ran the application for the customer.  Our support team will have to look this up in another system (or SF) to find out who it was.  ‘SID’ is their employee number, ‘Name’ is the name of the employee, and ‘Email’ is that employee’s email address.  That is who we’ll be forwarding the email to, and who we’ll be calling to speak with to tell them that we had a customer call in and complain that they didn’t apply.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Email of person that Submitted App’ is the employee at the dealership who actually ran the application for the customer.</inlineHelpText>
    <label>Email that Submitted Application</label>
    <type>Email</type>
</CustomField>