force-app/main/default/objects/Case/fields/Employee_they_worked_with__c.field-meta.xml
<CustomField>
    <fullName>Employee_they_worked_with__c</fullName>
    <description>‘Employee They Worked With’ is the name of the employee the customer worked with at the dealership.  Sometimes the customer can remember and sometimes they.  If they can, we’ll (our support team) populate that field</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>‘Employee They Worked With’ is the name of the employee the customer worked with at the dealership.  Sometimes the customer can remember and sometimes they.  If they can, we’ll (our support team) populate that field</inlineHelpText>
    <label>Employee they worked with</label>
    <length>50</length>
    <type>Text</type>
</CustomField>