force-app/main/default/objects/Case/fields/FNTS_Org_Case__c.field-meta.xml
<CustomField>
    <fullName>FNTS_Org_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FNTS Org Case?</label>
    <type>Checkbox</type>
</CustomField>