force-app/main/default/objects/Case/fields/Further_Action_Required__c.field-meta.xml
<CustomField>
    <fullName>Further_Action_Required__c</fullName>
    <label>Further Action Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>