force-app/main/default/objects/Case/fields/If_Pended_of_Days__c.field-meta.xml
<CustomField>
    <fullName>If_Pended_of_Days__c</fullName>
    <label>If Pended, # of Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>