force-app/main/default/objects/Case/fields/Implementation_Completed__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Completed__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Implementation Completed</label>
    <type>DateTime</type>
</CustomField>