force-app/main/default/objects/Case/fields/Implementation_to_Ops__c.field-meta.xml
<CustomField>
    <fullName>Implementation_to_Ops__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Implementation to Ops</label>
    <type>DateTime</type>
</CustomField>