force-app/main/default/objects/Case/fields/Internal_FNB_Contact__c.field-meta.xml
<CustomField>
    <fullName>Internal_FNB_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If someone other than the customer, more specifically someone INSIDE First National started the case, check this field</inlineHelpText>
    <label>Internal FNB Contact</label>
    <type>Checkbox</type>
</CustomField>