force-app/main/default/objects/Case/fields/Issue_Category__c.field-meta.xml
<CustomField>
    <fullName>Issue_Category__c</fullName>
    <label>Issue Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Account Verifications</fullName>
            </value>
            <value>
                <fullName>ACH Copies</fullName>
            </value>
            <value>
                <fullName>Add/Remove Account</fullName>
            </value>
            <value>
                <fullName>Add/Remove Location</fullName>
            </value>
            <value>
                <fullName>Address Change</fullName>
            </value>
            <value>
                <fullName>Affidavits</fullName>
            </value>
            <value>
                <fullName>Agreements</fullName>
            </value>
            <value>
                <fullName>AMTD ITMS Issues</fullName>
            </value>
            <value>
                <fullName>Archive</fullName>
            </value>
            <value>
                <fullName>Audit Confirmations</fullName>
            </value>
            <value>
                <fullName>Authorized Signer Maintenance</fullName>
            </value>
            <value>
                <fullName>Auto Loans</fullName>
            </value>
            <value>
                <fullName>Balance Inquiry</fullName>
            </value>
            <value>
                <fullName>Billing Issues</fullName>
            </value>
            <value>
                <fullName>Bonds</fullName>
            </value>
            <value>
                <fullName>CD</fullName>
            </value>
            <value>
                <fullName>CDAR</fullName>
            </value>
            <value>
                <fullName>CD Images</fullName>
            </value>
            <value>
                <fullName>Check Copies</fullName>
            </value>
            <value>
                <fullName>Check Deposited Incorrect Account</fullName>
            </value>
            <value>
                <fullName>Close Account</fullName>
            </value>
            <value>
                <fullName>Commercial Paper</fullName>
            </value>
            <value>
                <fullName>Customer Credits</fullName>
            </value>
            <value>
                <fullName>Customer Questions</fullName>
            </value>
            <value>
                <fullName>Debit Filtering</fullName>
            </value>
            <value>
                <fullName>Decisioning Issues</fullName>
            </value>
            <value>
                <fullName>Deposit Deletion</fullName>
            </value>
            <value>
                <fullName>Discrepancy in deposit</fullName>
            </value>
            <value>
                <fullName>Document Maintenance</fullName>
            </value>
            <value>
                <fullName>Drafts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>