force-app/main/default/objects/Case/fields/Issue_Category_other__c.field-meta.xml
<CustomField>
    <fullName>Issue_Category_other__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Issue Category (other)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>