force-app/main/default/objects/Case/fields/Issue_s__c.field-meta.xml
<CustomField>
    <fullName>Issue_s__c</fullName>
    <label>Issue(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FW1 - Doc Not Scanned</fullName>
            </value>
            <value>
                <fullName>FW2 - Improper Placement</fullName>
            </value>
            <value>
                <fullName>PPK1 - Missing Paperwork/Schedule</fullName>
            </value>
            <value>
                <fullName>PPK2 - Incomplete Paperwork/Schedule/pg 3</fullName>
            </value>
            <value>
                <fullName>PPK3 - Incorrect Paperwork/Schedule/pg 3</fullName>
            </value>
            <value>
                <fullName>PPK4 - Requestor Not Authorized</fullName>
            </value>
            <value>
                <fullName>ENR1 - Incomplete Enrollment Form</fullName>
            </value>
            <value>
                <fullName>ENR2 - Improper Enrollment Used/Version</fullName>
            </value>
            <value>
                <fullName>ENR3 - Incorrect Information for Setup</fullName>
            </value>
            <value>
                <fullName>ENR4 - CMO User Not Set Up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>