force-app/main/default/objects/Case/fields/Issue_Subcategory__c.field-meta.xml
<CustomField>
    <fullName>Issue_Subcategory__c</fullName>
    <label>Issue Subcategory</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Issue_Category__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>ACH Addenda Missing</fullName>
            </value>
            <value>
                <fullName>ACH Credits</fullName>
            </value>
            <value>
                <fullName>Add/Remove Individuals</fullName>
            </value>
            <value>
                <fullName>Add/Remove Notifications</fullName>
            </value>
            <value>
                <fullName>Add/Remove Repets</fullName>
            </value>
            <value>
                <fullName>Add/Remove Service/Product</fullName>
            </value>
            <value>
                <fullName>Add/Remove Standing</fullName>
            </value>
            <value>
                <fullName>Add/Remove User(s)</fullName>
            </value>
            <value>
                <fullName>Add Accounts</fullName>
            </value>
            <value>
                <fullName>Adding to Acceptable Transactions</fullName>
            </value>
            <value>
                <fullName>Audit Confirmations</fullName>
            </value>
            <value>
                <fullName>Balance Inquiry</fullName>
            </value>
            <value>
                <fullName>Can&#39;t Log In</fullName>
            </value>
            <value>
                <fullName>Can&#39;t See Images</fullName>
            </value>
            <value>
                <fullName>CD</fullName>
            </value>
            <value>
                <fullName>Change Administrator</fullName>
            </value>
            <value>
                <fullName>Check Errors</fullName>
            </value>
            <value>
                <fullName>CMO Transmission</fullName>
            </value>
            <value>
                <fullName>Complaint</fullName>
            </value>
            <value>
                <fullName>Credit Verification</fullName>
            </value>
            <value>
                <fullName>Customer Questions</fullName>
            </value>
            <value>
                <fullName>Cuts</fullName>
            </value>
            <value>
                <fullName>Delayed</fullName>
            </value>
            <value>
                <fullName>Deposits</fullName>
            </value>
            <value>
                <fullName>Discontinue/Add</fullName>
            </value>
            <value>
                <fullName>Dual Control</fullName>
            </value>
            <value>
                <fullName>Duplicate Deposits</fullName>
            </value>
            <value>
                <fullName>Duplicate Files</fullName>
            </value>
            <value>
                <fullName>Email Missing</fullName>
            </value>
            <value>
                <fullName>Encoding errors</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>