force-app/main/default/objects/Case/fields/Issue_Subcategory_other__c.field-meta.xml
<CustomField>
    <fullName>Issue_Subcategory_other__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Issue Subcategory (other)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>