force-app/main/default/objects/Case/fields/Last_Modified_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_Date_and_Time__c</fullName>
    <description>A new custom field, this &quot;Last Modified Date and Time&quot; will have a corresponding workflow that updates the field whenever a new Case Comment is created. This will force the Case core &quot;Last Modified Date&quot; to update whenever a Case Comment is added, which does not happen automatically.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Modified Date and Time</label>
    <type>DateTime</type>
</CustomField>