force-app/main/default/objects/Case/fields/Mother_s_Maiden_Name_Correct__c.field-meta.xml
<CustomField>
    <fullName>Mother_s_Maiden_Name_Correct__c</fullName>
    <label>Mother&#39;s Maiden Name Correct</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>