force-app/main/default/objects/Case/fields/Name_of_Internal_FNB_Contact__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Internal_FNB_Contact__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Name of Internal FNB Contact</label>
    <length>40</length>
    <type>Text</type>
</CustomField>