force-app/main/default/objects/Case/fields/New_systems_related_to_Issue__c.field-meta.xml
<CustomField>
    <fullName>New_systems_related_to_Issue__c</fullName>
    <inlineHelpText>Utilized by Mortgage Support for internal case tracking</inlineHelpText>
    <label>New systems related to Issue</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ernst</fullName>
            </value>
            <value>
                <fullName>Property Tax Direct</fullName>
            </value>
            <value>
                <fullName>Compliance Eagle</fullName>
            </value>
            <value>
                <fullName>Lender Price</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>