force-app/main/default/objects/Case/fields/On_Hold_Image__c.field-meta.xml
<CustomField>
    <fullName>On_Hold_Image__c</fullName>
    <formula>IF 
(
   NOT(ISBLANK(TEXT( On_Hold_Reason__c))), IMAGE(&quot;/servlet/servlet.FileDownload?file=0150c000003mydo&quot;, &quot;On Hold&quot;,35,40),  IMAGE(&quot;/img/s.gif&quot;, &quot;N/A&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>On Hold Image</label>
    <type>Text</type>
</CustomField>